YAL: added a cauchy reed solomon code from https://github.com/catid/longhair note: this implementation won't fix any random error bytes other than total packet loss, so don't use it with fcsfail.

--- a/Project/visualstudio2008/H264Player/H264Player.vcproj
+++ b/Project/visualstudio2008/H264Player/H264Player.vcproj
@@ -195,6 +195,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\modules\YAL\fec\cauchy_256.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\cauchy_256.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\cauchy_helper.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\cauchy_tables_256.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\modules\YAL\fec\frame.cpp"
 				>
 			</File>
@@ -208,6 +224,22 @@
 			</File>
 			<File
 				RelativePath="..\..\..\modules\YAL\fec\GFMath.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\MemSwap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\MemSwap.hpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\MemXOR.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\modules\YAL\fec\MemXOR.hpp"
 				>
 			</File>
 			<File
