--- a/Project/KEIL5/remote_controller_F1.uvprojx
+++ b/Project/KEIL5/remote_controller_F1.uvprojx
@@ -549,6 +549,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\HAL\STM32F1\F1UART.cpp</FilePath>
             </File>
+            <File>
+              <FileName>F1Storage.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\HAL\STM32F1\F1Storage.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -579,6 +584,16 @@
               <FileType>8</FileType>
               <FilePath>..\..\HAL\Interface\I2C_SW.cpp</FilePath>
             </File>
+            <File>
+              <FileName>RIJNDAEL.CPP</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\utils\RIJNDAEL.CPP</FilePath>
+            </File>
+            <File>
+              <FileName>space.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\utils\space.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -596,7 +611,7 @@
                   <RVCTOtherData>0</RVCTOtherData>
                   <ModuleSelection>0</ModuleSelection>
                   <IncludeInBuild>0</IncludeInBuild>
-                  <AlwaysBuild>2</AlwaysBuild>
+                  <AlwaysBuild>1</AlwaysBuild>
                   <GenerateAssemblyFile>2</GenerateAssemblyFile>
                   <AssembleAssemblyFile>2</AssembleAssemblyFile>
                   <PublicsOnly>2</PublicsOnly>
@@ -886,6 +901,56 @@
               <FileName>board_pi_rx.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\remote_controller\board_pi_rx.cpp</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>0</RVCTCodeConst>
+                  <RVCTZI>0</RVCTZI>
+                  <RVCTOtherData>0</RVCTOtherData>
+                  <ModuleSelection>0</ModuleSelection>
+                  <IncludeInBuild>1</IncludeInBuild>
+                  <AlwaysBuild>2</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules></IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds>
+                  <Cads>
+                    <interw>2</interw>
+                    <Optim>0</Optim>
+                    <oTime>2</oTime>
+                    <SplitLS>2</SplitLS>
+                    <OneElfS>2</OneElfS>
+                    <Strict>2</Strict>
+                    <EnumInt>2</EnumInt>
+                    <PlainCh>2</PlainCh>
+                    <Ropi>2</Ropi>
+                    <Rwpi>2</Rwpi>
+                    <wLevel>0</wLevel>
+                    <uThumb>2</uThumb>
+                    <uSurpInc>2</uSurpInc>
+                    <uC99>2</uC99>
+                    <useXO>2</useXO>
+                    <v6Lang>0</v6Lang>
+                    <v6LangP>0</v6LangP>
+                    <vShortEn>2</vShortEn>
+                    <vShortWch>2</vShortWch>
+                    <v6Lto>2</v6Lto>
+                    <v6WtE>2</v6WtE>
+                    <v6Rtti>2</v6Rtti>
+                    <VariousControls>
+                      <MiscControls></MiscControls>
+                      <Define></Define>
+                      <Undefine></Undefine>
+                      <IncludePath></IncludePath>
+                    </VariousControls>
+                  </Cads>
+                </FileArmAds>
+              </FileOption>
             </File>
             <File>
               <FileName>PPMOUT_f1.cpp</FileName>
