--- a/Project/KEIL5/remote_controller_F1.uvprojx
+++ b/Project/KEIL5/remote_controller_F1.uvprojx
@@ -610,7 +610,7 @@
                   <RVCTZI>0</RVCTZI>
                   <RVCTOtherData>0</RVCTOtherData>
                   <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>0</IncludeInBuild>
+                  <IncludeInBuild>1</IncludeInBuild>
                   <AlwaysBuild>1</AlwaysBuild>
                   <GenerateAssemblyFile>2</GenerateAssemblyFile>
                   <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -738,7 +738,7 @@
                   <RVCTZI>0</RVCTZI>
                   <RVCTOtherData>0</RVCTOtherData>
                   <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>1</IncludeInBuild>
+                  <IncludeInBuild>0</IncludeInBuild>
                   <AlwaysBuild>2</AlwaysBuild>
                   <GenerateAssemblyFile>2</GenerateAssemblyFile>
                   <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -908,7 +908,7 @@
                   <RVCTZI>0</RVCTZI>
                   <RVCTOtherData>0</RVCTOtherData>
                   <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>1</IncludeInBuild>
+                  <IncludeInBuild>0</IncludeInBuild>
                   <AlwaysBuild>2</AlwaysBuild>
                   <GenerateAssemblyFile>2</GenerateAssemblyFile>
                   <AssembleAssemblyFile>2</AssembleAssemblyFile>
@@ -956,6 +956,11 @@
               <FileName>PPMOUT_f1.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\remote_controller\PPMOUT_f1.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>board_fsi6-2.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\remote_controller\board_fsi6-2.cpp</FilePath>
             </File>
           </Files>
         </Group>
