--- a/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
+++ b/Project/visualstudio2008/hackrf_narrowband_fft/hackrf_narrowband_fft.vcproj
@@ -179,6 +179,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\hackrf.h"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
